@@ -6,6 +6,16 @@ from datetime import datetime
 from backend.security.redact import mask_secrets
 
 
+def _json_serializable(obj):
+	"""Convert objects to JSON-serializable format."""
+	if hasattr(obj, '__dict__'):
+		return str(obj)
+	elif hasattr(obj, '__str__'):
+		return str(obj)
+	else:
+		return repr(obj)
+
+
 class JsonFormatter(logging.Formatter):
 	def format(self, record: logging.LogRecord) -> str:
 		payload = {
@@ -18,7 +28,7 @@ class JsonFormatter(logging.Formatter):
 			payload["args"] = mask_secrets(record.args)
 		if record.exc_info:
 			payload["exc_info"] = self.formatException(record.exc_info)
-		return json.dumps(payload)
+		return json.dumps(payload, default=_json_serializable)
 
 
 def configure_logging(level: int = logging.INFO) -> None:
