@@ -3,7 +3,9 @@ from __future__ import annotations
 import os
 from celery import Celery
 
-BROKER_URL = os.getenv("CELERY_BROKER_URL") or os.getenv("REDIS_URL", "redis://localhost:6379/0")
+REDIS_HOST = os.getenv("REDIS_HOST", "localhost")
+REDIS_PORT = os.getenv("REDIS_PORT", "6379")
+BROKER_URL = os.getenv("CELERY_BROKER_URL") or os.getenv("REDIS_URL", f"redis://{REDIS_HOST}:{REDIS_PORT}/0")
 RESULT_BACKEND = os.getenv("CELERY_RESULT_BACKEND") or BROKER_URL
 
 # TODO(MVP): Switch broker/result back to Redis or RabbitMQ for production deployments
